add DELETE collection & some fixes
